Updated reference mail

--- a/main.tex
+++ b/main.tex
@@ -259,7 +259,7 @@
       {Pulkit Jain (Ex-colleague)}{Worked during Aug. 2018 -- May. 2021}
       {Senior Business Analyst at Uber}{Bangalore, India}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Email}: pulkit.jain@tredence.com}
+    	\resumeItem {\textbf{Email}: pulkitj@uber.com}
       	\resumeItem {\textbf{Mob No}: +91 9940628145}
   
         \resumeItemListEnd
