Updated the GitHub CE Program

--- a/main.tex
+++ b/main.tex
@@ -191,7 +191,7 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming:} { Python, Git, HTML, CSS, MySQL, R}\vspace{2pt} \\
+     \textbf{Programming:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel, Google Analytics, GTM} \\
      \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org}\
      
@@ -214,8 +214,7 @@
 
 
 %-------------------------------------------
-
-
+https://education.github.com/globalcampus/exchange?utf8=%E2%9C%93&q=sanjay
 %-----------EDUCATION-----------
 \section {EDUCATION}
   \resumeSubHeadingListStart
@@ -223,8 +222,9 @@
       {Macquarie University}{Feb. 2021 -- Dec. 2022}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics}
-  
+    	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
+  \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
+{\myuline {GitHub community exchange program.}}}
         \resumeItemListEnd
 
   
