Updated Website URL

--- a/main.tex
+++ b/main.tex
@@ -151,7 +151,7 @@
 
     \resumeSubheading
       {Recode Hive}{May. 2021 -- June. 2021}
-      {Founder/ Head of Content (\href{https://recodehive.com/}{\myuline {recodehive.com}})}{Kochi, India}
+      {Founder/ Head of Content (\href{https://recodehive.com/sanjay/}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months.}}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students. }
@@ -192,8 +192,8 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS, Excel, Google Analytics, GTM} \\
-     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org}\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS(EC2,S3), Excel, Tableau} \\
+     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org.}\
      
     }}
  \end{itemize}
