Updated the URL

--- a/main.tex
+++ b/main.tex
@@ -151,7 +151,7 @@
 
     \resumeSubheading
       {Recode Hive}{May. 2021 -- June. 2021}
-      {Founder/ Head of Content (\href{https://recodehive.com/sanjay/}{\myuline {recodehive.com}})}{Kochi, India}
+      {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months.}}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students. }
