--- a/main.tex
+++ b/main.tex
@@ -208,13 +208,13 @@
 {\myuline {training}} from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
 {\myuline {recognition}} award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
-          \textbf{Google Local guide:} Added 10+ km using Road mapper, Featured and invited to California office for proactive work.}}
+          \textbf{Google Local guide:} Added 200+ km using Road mapper, Featured and invited to California office for proactive work.}}
   
  \end{itemize}
 
 
 %-------------------------------------------
-https://education.github.com/globalcampus/exchange?utf8=%E2%9C%93&q=sanjay
+
 %-----------EDUCATION-----------
 \section {EDUCATION}
   \resumeSubHeadingListStart
@@ -224,7 +224,7 @@ https://education.github.com/globalcampus/exchange?utf8=%E2%9C%93&q=sanjay
       	\resumeItemListStart
     	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
-{\myuline {GitHub community exchange program.}}}
+{\myuline {GitHub community exchange program}}}
         \resumeItemListEnd
 
   
