Updates to date and icon hovers

--- a/main.tex
+++ b/main.tex
@@ -139,9 +139,9 @@
     \textbf{\Large SANJAY KANAKKOT VISWANATHAN} \\ \vspace{4pt}
     \small \faPhone* \texttt{+61 448716345} \hspace{1pt} $|$
     \hspace{1pt} \faEnvelope \hspace{2pt} \texttt{sanjay.kanakkot@gmail.com} \hspace{1pt} $|$ 
-    \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {LinkedIn}}} \hspace{1pt} $|$
-    \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {Github}}}}
-    \hspace{1pt} \faInfoCircle \hspace{2pt}\texttt{{\href{http://sanjaykv.com}{\myuline {Portfolio}}}}
+    \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {sanjay-k-v}}} \hspace{1pt} $|$
+    \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {sanjay-kv}}}}
+    \hspace{1pt} \faInfoCircle \hspace{2pt}\texttt{{\href{http://sanjaykv.com}{\myuline {sanjaykv.com}}}}
      
 \end{center}
 
@@ -150,7 +150,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Recode Hive}{May. 2021 -- June. 2021}
+      {Recode Hive}{May. 2021 -- Dec. 2022}
       {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months.}}
@@ -205,7 +205,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{GitHub Campus Expert:} {Completed 6 Weeks of \href{https://githubcampus.expert/sanjay-kv/}
-{\myuline {training}} from GitHub education team from Oct 15 2021.}\vspace{2pt} \\
+{\myuline {training}} from GitHub Team and hosted 10 workshops so far.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
 {\myuline {recognition}} award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
           \textbf{Google Local guide:} Added 200+ km using Road mapper, Featured and invited to California office for proactive work.}}
@@ -224,7 +224,8 @@
       	\resumeItemListStart
     	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
-{\myuline {GitHub community exchange program}}}
+{\myuline {GitHub community exchange program}}}\\
+\textbf{Upcoming Google Explore ML Facilitator}, Selected by Google on Nov 2023, Expected training date dec 2023.
         \resumeItemListEnd
 
   
