--- a/main.tex
+++ b/main.tex
@@ -150,10 +150,10 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Recode Hive}{May. 2021 -- Dec. 2022}
+      {Recode Hive}{May. 2021 -- Jan. 2023}
       {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
-        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{12k Followers in 6 months.}}
+        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{13k Followers in 6 months.}}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students. }
         \resumeItem{\textbf{Highlights}:
             Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.
@@ -166,7 +166,7 @@
       \resumeItemListStart
         \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers.}
         \resumeItem{Worked on Power BI \textbf{Data modeling with SAP raw data for internal project} with team of 4.}
-        \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
+        \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
 
@@ -204,11 +204,12 @@
 \section{VOLUNTEER EXPERIENCE}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
+    \textbf{Google Explore ML Facilitator:} {Undergoing training from Google team on ML and Neural Network to be facilitator.}\vspace{2pt} \\
      \textbf{GitHub Campus Expert:} {Completed 6 Weeks of \href{https://githubcampus.expert/sanjay-kv/}
 {\myuline {training}} from GitHub Team and hosted 10 workshops so far.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
 {\myuline {recognition}} award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
-          \textbf{Google Local guide:} Added 200+ km using Road mapper, Featured and invited to California office for proactive work.}}
+}}
   
  \end{itemize}
 
