--- a/main.tex
+++ b/main.tex
@@ -166,7 +166,7 @@
       \resumeItemListStart
         \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers.}
         \resumeItem{Worked on Power BI \textbf{Data modeling with SAP raw data for internal project} with team of 4.}
-        \resumeItem{ Completed 5 Projects, created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
+        \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
 
@@ -204,12 +204,11 @@
 \section{VOLUNTEER EXPERIENCE}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-    \textbf{Google Explore ML Facilitator:} {Undergoing training from Google team on ML and Neural Network to be facilitator.}\vspace{2pt} \\
      \textbf{GitHub Campus Expert:} {Completed 6 Weeks of \href{https://githubcampus.expert/sanjay-kv/}
 {\myuline {training}} from GitHub Team and hosted 10 workshops so far.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
 {\myuline {recognition}} award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
-}}
+          \textbf{Google Local guide:} Added 200+ km using Road mapper, Featured and invited to California office for proactive work.}}
   
  \end{itemize}
 
@@ -226,7 +225,7 @@
     	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
 {\myuline {GitHub community exchange program}}}\\
-\textbf{Upcoming Google Explore ML Facilitator}, Selected by Google on Nov 2023, Expected training date dec 2023.
+\textbf{Upcoming Google Explore ML Facilitator}, Selected by Google on Dec 2022, Expected training date Feb 2023.
         \resumeItemListEnd
 
   
