Added internship position

--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,14 @@
 %-----------EXPERIENCE-----------
 \section{EXPERIENCE}
   \resumeSubHeadingListStart
+    \resumeSubheading
+      {Truuth}{Feb. 2023 -- Current}
+      {Data Scientist Intern }{Kochi, India}
+      \resumeItemListStart
+        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{13k Followers in 6 months.}}
 
+      \resumeItemListEnd
+      
     \resumeSubheading
       {Recode Hive}{May. 2021 -- Jan. 2023}
       {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
