--- a/main.tex
+++ b/main.tex
@@ -152,7 +152,7 @@
       {Truuth}{Feb. 2023 -- Current}
       {Data Scientist Intern }{Kochi, India}
       \resumeItemListStart
-        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{13k Followers in 6 months.}}
+        \resumeItem{Roles include text extraction from documents, and accuracy by testing the check on authentic and fake documents.}}
 
       \resumeItemListEnd
       
