Added the dev roles.

--- a/main.tex
+++ b/main.tex
@@ -152,10 +152,11 @@
       {Truuth}{Feb. 2023 -- Current}
       {Data Scientist Intern }{Kochi, India}
       \resumeItemListStart
-        \resumeItem{Roles include text extraction from documents, and accuracy by testing the check on authentic and fake documents.}}
-
+        \resumeItem{Roles include text extraction from documents, and accuracy by testing the check on authentic and fake documents.}
+        \resumeItem{Define the logic of matching unique security features against the defined metadata..}
       \resumeItemListEnd
-      
+
+
     \resumeSubheading
       {Recode Hive}{May. 2021 -- Jan. 2023}
       {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
@@ -232,7 +233,7 @@
     	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
 {\myuline {GitHub community exchange program}}}\\
-\textbf{Upcoming Google Explore ML Facilitator}, Selected by Google on Dec 2022, Expected training date Feb 2023.
+\textbf{Google Explore ML Facilitator}, Selected by Google on Dec 2022, Hosted 3 workshops so far.
         \resumeItemListEnd
 
   
