--- a/main.tex
+++ b/main.tex
@@ -150,10 +150,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Truuth}{Feb. 2023 -- Current}
-      {Data Scientist Intern }{Kochi, India}
+      {Data Scientist Intern }{Sydney, Australia}
       \resumeItemListStart
-        \resumeItem{Roles include text extraction from documents, and accuracy by testing the check on authentic and fake documents.}
-        \resumeItem{Define the logic of matching unique security features against the defined metadata..}
+        \resumeItem{Design, build, and improve text format check in the organization & quantify accuracy.}
+        \resumeItem{Analyse the organization data and optimize for Visual Feature checks.}
       \resumeItemListEnd
 
 
@@ -199,8 +199,8 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS(EC2,S3), Excel, Tableau} \\
+     \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS(EC2,S3, Sage Maker), Excel, Tableau} \\
      \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org.}\
      
     }}
@@ -233,7 +233,8 @@
     	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
 {\myuline {GitHub community exchange program}}}\\
-\textbf{Google Explore ML Facilitator}, Selected by Google on Dec 2022, Hosted 3 workshops so far.
+\textbf{Google Explore ML Facilitator}, Selected by Google on Dec 2022, \href{https://rsvp.withgoogle.com/events/explore-ml-with-crowdsource-workshops-on-air/facilitators}
+{\myuline {Hosted 8 workshops.}}}
         \resumeItemListEnd
 
   
