Update Microsoft Resume

--- a/main.tex
+++ b/main.tex
@@ -149,11 +149,11 @@
 \section{EXPERIENCE}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Truuth}{Feb. 2023 -- Current}
+      {Truuth}{Feb. 2023 -- June. 2023}
       {Data Scientist Intern }{Sydney, Australia}
       \resumeItemListStart
-        \resumeItem{Design, build, and improve text format check in the organization & quantify accuracy.}
-        \resumeItem{Analyse the organization data and optimize for Visual Feature checks.}
+        \resumeItem{Using Azure to design, build, and improve text format check in the organization and quantify accuracy.}
+        \resumeItem{Implemented Adaptive Image Enhancement models and improved Visual feature check by \textbf{90 percent.}}
       \resumeItemListEnd
 
 
@@ -162,7 +162,7 @@
       {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{13k Followers in 6 months.}}
-        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students. }
+        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students, Cloud Advocate. }
         \resumeItem{\textbf{Highlights}:
             Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.
             }
@@ -172,7 +172,7 @@
       {Larsen and Toubro Infotech Ltd. - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Developed interactive dashboards and generated reports in SAP Cloud for customers.}
+        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and generated reports in SAP C4C.}
         \resumeItem{Worked on Power BI \textbf{Data modeling with SAP raw data for internal project} with team of 4.}
         \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
@@ -200,8 +200,8 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS(EC2,S3, Sage Maker), Excel, Tableau} \\
-     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Leadership, Public Speaking, Opensource contributor at Legesher, Eddiehub org.}\
+     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, Azure, Excel, Visual Studio Code.} \\
+     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Team Development, Public Speaking, Opensource, Community Management, Content Creation, Product Development}\
      
     }}
  \end{itemize}
@@ -215,7 +215,7 @@
      \textbf{GitHub Campus Expert:} {Completed 6 Weeks of \href{https://githubcampus.expert/sanjay-kv/}
 {\myuline {training}} from GitHub Team and hosted 10 workshops so far.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
-{\myuline {recognition}} award for \textbf{mentoring and training} 1st Seeds program in Taiwan}\\
+{\myuline {recognition}} award for \textbf{mentoring} and build local communities.}\\
           \textbf{Google Local guide:} Added 200+ km using Road mapper, Featured and invited to California office for proactive work.}}
   
  \end{itemize}
@@ -227,13 +227,13 @@
 \section {EDUCATION}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Macquarie University}{Feb. 2021 -- Dec. 2022}
+      {Macquarie University}{Feb. 2021 -- June. 2023}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
     	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
 {\myuline {GitHub community exchange program}}}\\
-\textbf{Google Explore ML Facilitator}, Selected by Google on Dec 2022, \href{https://rsvp.withgoogle.com/events/explore-ml-with-crowdsource-workshops-on-air/facilitators}
+\textbf{Google Explore ML Facilitator}, Worked with Product Team, \href{https://rsvp.withgoogle.com/events/explore-ml-with-crowdsource-workshops-on-air/facilitators}
 {\myuline {Hosted 8 workshops.}}}
         \resumeItemListEnd
 
@@ -266,6 +266,16 @@
 \section {REFERENCES}
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Mike Simpson }{Worked during Aug. 2023 -- Feb, June}
+      {CEO, Co-founder at Truuth}{Sydney, Australia}
+      	\resumeItemListStart
+    	\resumeItem {\textbf{Email}: Mike.simpson@truuth.id}
+      	\resumeItem {\textbf{Mob No}: +61 0432545256}
+  \\
+  
+        \resumeItemListEnd
+  \resumeSubHeadingListStart
+    \resumeSubheading
       {Pulkit Jain (Ex-colleague)}{Worked during Aug. 2018 -- May. 2021}
       {Senior Business Analyst at Uber}{Bangalore, India}
       	\resumeItemListStart
@@ -277,8 +287,8 @@
   
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Iswarya Balakrishnan(Ex- Crowdsource by Google PM)}{April. 2020 -- Sept. 2021}
-      {Strategic Partner Development Manager, Google Search}{Bangalore, India}
+      {Iswarya Balakrishnan}{April. 2020 -- Sept. 2021}
+      {Strategic Partner Development Manager, Google}{Bangalore, India}
 	\resumeItemListStart
     	\resumeItem {\textbf{Email}: ibalakrishnan@google.com}
       	\resumeItem {\textbf{Mob No}: +91 6366256630}
