Changes to Telstra

--- a/main.tex
+++ b/main.tex
@@ -172,8 +172,8 @@
       {Larsen and Toubro Infotech Ltd. - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and generated reports in SAP C4C.}
-        \resumeItem{Worked on Power BI \textbf{Data modeling with SAP raw data for internal project} with team of 4.}
+        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients.}
+        \resumeItem{Worked closely with stakeholders on Power BI \textbf{Data modeling with SAP raw data} with team of 4.}
         \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
 
     \resumeItemListEnd
@@ -201,7 +201,7 @@
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, Azure, Excel, Visual Studio Code.} \\
-     \textbf{Hobbies/ Other skills:} { SEO, Blogging, Team Development, Public Speaking, Opensource, Community Management, Content Creation, Product Development}\
+     \textbf{Hobbies/ Other skills:} { Reporting, Tableau, ETL, GCP, Data Driven, Big Query, Project Leadership}\
      
     }}
  \end{itemize}
@@ -221,7 +221,7 @@
  \end{itemize}
 
 
-%-------------------------------------------
+%-------------------------------------------    
 
 %-----------EDUCATION-----------
 \section {EDUCATION}
