--- a/main.tex
+++ b/main.tex
@@ -234,7 +234,7 @@
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
 {\myuline {GitHub community exchange program}}}\\
 \textbf{Google Explore ML Facilitator}, Worked with Product Team, \href{https://rsvp.withgoogle.com/events/explore-ml-with-crowdsource-workshops-on-air/facilitators}
-{\myuline {Hosted 8 workshops.}}}
+{\myuline {Hosted 10 workshops.}}}
         \resumeItemListEnd
 
   
@@ -253,7 +253,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
            \resumeItemListStart
-            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification - Expiry 2023.}
+            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification - Expiry 2023 Dec.}
          \resumeItem{LinkedIn Learning certification on \textbf{diversity, inclusion, and belonging}. }
           \resumeItemListEnd    
     }}
