--- a/main.tex
+++ b/main.tex
@@ -201,7 +201,7 @@
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, Azure, Excel, Visual Studio Code.} \\
-     \textbf{Hobbies/ Other skills:} { Reporting, Tableau, ETL, GCP, Data Driven, Big Query, Project Leadership}\
+     \textbf{Hobbies/ Other skills:} { Data Analytics, Cross-functional Collaboration, Project Management, GCP, CRM, Business Systems, EDA}\
      
     }}
  \end{itemize}
