Updated job file

--- a/main.tex
+++ b/main.tex
@@ -201,7 +201,7 @@
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, Azure, Excel, Visual Studio Code.} \\
-     \textbf{Hobbies/ Other skills:} { Data Analytics, Cross-functional Collaboration, Project Management, GCP, CRM, Business Systems, EDA}\
+     \textbf{Hobbies/ Other skills:} { Data Analytics, Cross-functional Collaboration, Project Management, GCP, EDA}\
      
     }}
  \end{itemize}
@@ -230,7 +230,7 @@
       {Macquarie University}{Feb. 2021 -- June. 2023}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data, Applied Statistics.}
+    	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data}
   \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
 {\myuline {GitHub community exchange program}}}\\
 \textbf{Google Explore ML Facilitator}, Worked with Product Team, \href{https://rsvp.withgoogle.com/events/explore-ml-with-crowdsource-workshops-on-air/facilitators}
