--- a/main.tex
+++ b/main.tex
@@ -253,7 +253,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
            \resumeItemListStart
-            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification - Expiry 2023 Dec.}
+            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification.}
          \resumeItem{LinkedIn Learning certification on \textbf{diversity, inclusion, and belonging}. }
           \resumeItemListEnd    
     }}
