--- a/main.tex
+++ b/main.tex
@@ -199,9 +199,9 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL}\vspace{2pt} \\
+     \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, Azure, Excel, Visual Studio Code.} \\
-     \textbf{Hobbies/ Other skills:} { Data Analytics, Cross-functional Collaboration, Project Management, GCP, EDA}\
+     \textbf{Hobbies/ Other skills:} { Presentations, Product Launch, Product Management, Product Strategies, Sales and Marketing}\
      
     }}
  \end{itemize}
