--- a/main.tex
+++ b/main.tex
@@ -200,7 +200,7 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Numpy, Pandas, Sklearn, PowerBI, Google Analytics, Azure, Excel, Visual Studio Code.} \\
+     \textbf{Tools/ Frameworks:} { PyTorch, TensorFlow, Keras, MXNet, Caffe2, scikit-learn} \\
      \textbf{Hobbies/ Other skills:} { Presentations, Product Launch, Product Management, Product Strategies, Sales and Marketing}\
      
     }}
