--- a/main.tex
+++ b/main.tex
@@ -199,9 +199,9 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { PyTorch, TensorFlow, Keras, MXNet, Caffe2, scikit-learn} \\
-     \textbf{Hobbies/ Other skills:} { Presentations, Product Launch, Product Management, Product Strategies, Sales and Marketing}\
+     \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL, R}\vspace{2pt} \\
+     \textbf{Tools/ Frameworks:} { Data Visualization , Analytics ,  Data Analytics , RStudio · Problem Solving , Stakeholder Engagement } \\
+     \textbf{Hobbies/ Other skills:} { Deep Learning, Analytical Skills ,   Predictive Analytics , Quantitative Data , UX Research ·}\
      
     }}
  \end{itemize}
