--- a/main.tex
+++ b/main.tex
@@ -149,32 +149,30 @@
 \section{EXPERIENCE}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Truuth}{Feb. 2023 -- July. 2023}
-      {Data Scientist Intern }{Sydney, Australia}
-      \resumeItemListStart
-        \resumeItem{Using Azure to design, build, and improve text format check in the organization and quantify accuracy.}
-        \resumeItem{Implemented Adaptive Image Enhancement models and improved Visual feature check by \textbf{90 percent.}}
-      \resumeItemListEnd
-
-
-    \resumeSubheading
-      {Recode Hive}{May. 2021 -- Jan. 2023}
+      {Recode Hive}{May. 2021 -- Current}
       {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
         \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{13k Followers in 6 months.}}
         \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students, Cloud Advocate. }
         \resumeItem{\textbf{Highlights}:
-            Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.
-            }
+            Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.}
       \resumeItemListEnd
+    \resumeSubheading
+      {Truuth}{Feb. 2023 -- July. 2023}
+      {Data Scientist Intern }{Sydney, Australia}
+      \resumeItemListStart
+        \resumeItem{Transformed global financial crime data into actionable insights through adaptive image enhancement models and visual checks.}
+        \resumeItem{Streamlined data processing by \textbf{90 percent.}through adaptive image enhancement models and enhanced visual check for improved business decisions }
+      \resumeItemListEnd
+
 
     \resumeSubheading
       {Larsen and Toubro Infotech Ltd. - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients.}
-        \resumeItem{Worked closely with stakeholders on Power BI \textbf{Data modeling with SAP raw data} with team of 4.}
-        \resumeItem{ Completed 5 Projects. Created inventory tool which improved team productivity by\textbf{ 20 percentage}.}
+        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients and stakeholders.}
+        \resumeItem{Improved operational decisions in Banking and Financial Services by creating dashboards and charts from data analysis of 3M+ data points.}
+        \resumeItem{ Improved team productivity by 20 percent through creating inventory tool for Retail assets management.}
 
     \resumeItemListEnd
 
@@ -189,7 +187,7 @@
           {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
             \resumeItem{Analysed Stack Overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc.}
-            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using Machine Learning. 
+            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using Machine Learning which accomplished in fast paced and agile Environment.. 
             \href{https://github.com/sanjay-kv/Stackoverflow-Analysis}{\myuline {GitHub Link}}}
           \resumeItemListEnd
   
@@ -200,8 +198,8 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL, R}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} { Data Visualization , Analytics ,  Data Analytics , RStudio · Problem Solving , Stakeholder Engagement } \\
-     \textbf{Hobbies/ Other skills:} { Deep Learning, Analytical Skills ,   Predictive Analytics , Quantitative Data , UX Research ·}\
+     \textbf{Tools/ Frameworks:} {  Data Collection, Datasets, Problem Solving, Analytical Skills, Communication, Data Analytics, Data Models, } \\
+     \textbf{Hobbies/ Other skills:} {Monitoring, Community, Business Insights, Data Analysis  Data And Analytics, Data Insights, Implementation. }\
      
     }}
  \end{itemize}
