--- a/main.tex
+++ b/main.tex
@@ -170,8 +170,8 @@
       {Larsen and Toubro Infotech Ltd. - LTI}{Aug. 2018 -- May. 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients and stakeholders.}
-        \resumeItem{Improved operational decisions in Banking and Financial Services by creating dashboards and charts from data analysis of 3M+ data points.}
+        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients.}
+        \resumeItem{Successfully delivered end-to-end data-driven remediation project using predictive analytics, resulting in 20 percent increase in efficiency.}
         \resumeItem{ Improved team productivity by 20 percent through creating inventory tool for Retail assets management.}
 
     \resumeItemListEnd
@@ -186,7 +186,7 @@
       \resumeProjectHeading
           {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack Overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc.}
+            \resumeItem{Analysed Stack Overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc as insights.}
             \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using Machine Learning which accomplished in fast paced and agile Environment.. 
             \href{https://github.com/sanjay-kv/Stackoverflow-Analysis}{\myuline {GitHub Link}}}
           \resumeItemListEnd
@@ -198,12 +198,11 @@
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL, R}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} {  Data Collection, Datasets, Problem Solving, Analytical Skills, Communication, Data Analytics, Data Models, } \\
-     \textbf{Hobbies/ Other skills:} {Monitoring, Community, Business Insights, Data Analysis  Data And Analytics, Data Insights, Implementation. }\
+     \textbf{Tools/ Frameworks:} {  Data Collection, Datasets, Problem Solving, Analytical Skills, Communication, Data Analytics,  } \\
+     \textbf{Hobbies/ Other skills:} {Analytical Skills ,  Data Visualization, Algorithms, Microsoft Azure, Solve Problems, Microsoft Excel, Microsoft Office}\
      
     }}
  \end{itemize}
-
 
 %-------------------------------------------    
 %-----------VOLUNTEER EXPERIENCE-----------
@@ -214,13 +213,10 @@
 {\myuline {training}} from GitHub Team and hosted 10 workshops so far.}\vspace{2pt} \\
      \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
 {\myuline {recognition}} award for \textbf{mentoring} and build local communities.}\\
-          \textbf{Google Local guide:} Added 200+ km using Road mapper, Featured and invited to California office for proactive work.}}
-  
+         
  \end{itemize}
 
-
 %-------------------------------------------    
-
 %-----------EDUCATION-----------
 \section {EDUCATION}
   \resumeSubHeadingListStart
