--- a/main.tex
+++ b/main.tex
@@ -161,7 +161,8 @@
       {Truuth}{Feb. 2023 -- July. 2023}
       {Data Scientist Intern }{Sydney, Australia}
       \resumeItemListStart
-        \resumeItem{Transformed global financial crime data into actionable insights through adaptive image enhancement models and visual checks.}
+        \resumeItem{Improved data quality reporting by 90 percent,  through implementing adaptive image enhancement models and enhanced visual feature checks.
+}
         \resumeItem{Streamlined data processing by \textbf{90 percent.}through adaptive image enhancement models and enhanced visual check for improved business decisions }
       \resumeItemListEnd
 
@@ -199,7 +200,7 @@
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL, R}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} {  Data Collection, Datasets, Problem Solving, Analytical Skills, Communication, Data Analytics,  } \\
-     \textbf{Hobbies/ Other skills:} {Analytical Skills ,  Data Visualization, Algorithms, Microsoft Azure, Solve Problems, Microsoft Excel, Microsoft Office}\
+     \textbf{Hobbies/ Other skills:} {Supply Chain, Logistics, Decision Making, Data Minining, Forecast, Automate, Analysis, Reporting.}\
      
     }}
  \end{itemize}
