--- a/main.tex
+++ b/main.tex
@@ -158,12 +158,12 @@
             Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.}
       \resumeItemListEnd
     \resumeSubheading
-      {Truuth}{Feb. 2023 -- July. 2023}
+      {Truuth}{February  2023 – July 2023}
       {Data Scientist Intern }{Sydney, Australia}
       \resumeItemListStart
         \resumeItem{Improved data quality reporting by 90 percent,  through implementing adaptive image enhancement models and enhanced visual feature checks.
 }
-        \resumeItem{Streamlined data processing by \textbf{90 percent.}through adaptive image enhancement models and enhanced visual check for improved business decisions }
+        \resumeItem{Optimized text format checks within the organization by Azure tools; enhanced accuracy rates by 50 Percent. }
       \resumeItemListEnd
 
 
@@ -194,18 +194,7 @@
   
     \resumeSubHeadingListEnd
     
-%-----------PROGRAMMING SKILLS-----------
-\section{SKILLS}
- \begin{itemize}[leftmargin=0in, label={}]
-    \small{\item{
-     \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL, R}\vspace{2pt} \\
-     \textbf{Tools/ Frameworks:} {  Data Collection, Datasets, Problem Solving, Analytical Skills, Communication, Data Analytics,  } \\
-     \textbf{Hobbies/ Other skills:} {Supply Chain, Logistics, Decision Making, Data Minining, Forecast, Automate, Analysis, Reporting.}\
-     
-    }}
- \end{itemize}
 
-%-------------------------------------------    
 %-----------VOLUNTEER EXPERIENCE-----------
 \section{VOLUNTEER EXPERIENCE}
  \begin{itemize}[leftmargin=0in, label={}]
@@ -242,7 +231,18 @@
 
 %
 
+%-----------PROGRAMMING SKILLS-----------
+\section{SKILLS}
+ \begin{itemize}[leftmargin=0in, label={}]
+    \small{\item{
+     \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL}\vspace{2pt} \\
+     \textbf{Tools/ Frameworks:} {   Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS(EC2, S3), Excel, Tableau,  } \\
+     \textbf{Hobbies/ Other skills:} {SEO, Blogging, Leadership, Public Speaking, Opensource contribution.}\
+     
+    }}
+ \end{itemize}
 
+%-------------------------------------------    
 %-----------PROGRAMMING SKILLS-----------
 \section{CERTIFICATIONS}
  \begin{itemize}[leftmargin=0in, label={}]
